--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     ]
   },
   "devDependencies": {
+    "@redwoodjs/auth-dbauth-setup": "6.4.0",
     "@redwoodjs/cli-storybook": "6.4.0",
     "@redwoodjs/core": "6.4.0"
   },
