--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,10 @@
   "devDependencies": {
     "@redwoodjs/vite": "6.4.0",
     "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6"
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "postcss-loader": "^7.3.3",
+    "tailwindcss": "^3.3.6"
   }
 }
