--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,8 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@redwoodjs/auth-dbauth-web": "6.4.0",
     "@redwoodjs/forms": "6.4.0",
     "@redwoodjs/router": "6.4.0",
