--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@redwoodjs/auth-dbauth-web": "6.4.0",
     "@redwoodjs/forms": "6.4.0",
     "@redwoodjs/router": "6.4.0",
