--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,7 @@
     "**/.keep": true,
     "**/types": true,
     "web/config": true,
-    "web/src/index.html": true,
+    // "web/src/index.html": true,
     "web/src/App.jsx": true,
     "web/src/entry.client.jsx": true,
   }
