--- a/redwood.toml
+++ b/redwood.toml
@@ -6,7 +6,7 @@
 # https://redwoodjs.com/docs/app-configuration-redwood-toml
 
 [web]
-  title = "Redwood App"
+  title = "Tulsa Forums"
   port = 8910
   apiUrl = "/api"
   includeEnvironmentVariables = [
